<resources>
    <string name="app_name">MovieCatalogueSub5</string>
    <string name="text_tv_show">Tv Show</string>
    <string name="text_movies">Movies</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_title">Title</string>
    <string name="text_0_0">0.0</string>
    <string name="text_tab_fav_movies">Movies</string>
    <string name="text_tab_fav_tvShow">Tv Show</string>
    <string name="release_date">Release Date :</string>
    <string name="vote_average">Vote Average :</string>
    <string name="text_overview">Overview</string>
    <string name="text_popularity">Popularity</string>
    <string name="first_air_date">First Air Date :</string>
    <string name="vote_count">Vote Count</string>
    <string name="there_are_no_favorite_movies">There Are No Favorite Movies</string>
    <string name="there_are_no_favorite_tvShow">There Are No Favorite Tv Show</string>
    <string name="text_open_detail_movies">Open Detail Movies</string>
    <string name="text_delete_item">Delete Movies</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_delete_succsessfully">Deleted successfully</string>
    <string name="text_add_success">Added successfully</string>
    <string name="appwidget_text">FAVORITE BANNER</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="title_date_of_release">Date Of Release</string>
    <string name="message_daily_reminder">Long time No See! Open Now!</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="on_release_reminder">Release Reminder Active</string>
    <string name="off_release_reminder">Release Reminder Inactive</string>
    <string name="new_release">New Release</string>
    <string name="on_daily_reminder">Daily Reminder Active</string>
    <string name="off_daily_reminder">Daily Reminder Inactive</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="text_hint_search">Enter Keyword</string>
    <string name="text_search_movies">Search Movies</string>
    <string name="text_search_tvshow">Search Tv Show</string>
    <string name="text_header_catalogue_movie">Catalogue  \nMovie</string>
    <string name="text_desc_daily_reminder">Activate to remind every day</string>
    <string name="text_desc_release_today_reminder">Activate to remind film release</string>
    <string name="text_setting">Setting</string>
</resources>
