<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="id.aldiansyah.moviecataloguesub5.fragment.MoviesFragment"
        android:label="@string/text_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvShow"
        android:name="id.aldiansyah.moviecataloguesub5.fragment.TvShowFragment"
        android:label="@string/text_tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.aldiansyah.moviecataloguesub5.fragment.FavoriteFragment"
        android:label="@string/text_favorite"
        tools:layout="@layout/fragment_favorite" />

</navigation>