<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".detail.MoviesDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:titleTextColor="@android:color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/img_backdrop_movies_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/img_backdrop_movies_detail"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/img_poster_movies_detail"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/img_backdrop_movies_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_backdrop_movies_detail" />

        <TextView
            android:id="@+id/tv_title_movies_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/img_poster_movies_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_backdrop_movies_detail"
            tools:text="@string/text_title" />

        <TextView
            android:id="@+id/tv_release_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/release_date"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/img_poster_movies_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movies_detail" />

        <TextView
            android:id="@+id/tv_release_movies_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@+id/tv_release_movies"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movies_detail" />

        <TextView
            android:id="@+id/tv_vote_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/vote_average"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/img_poster_movies_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_movies_detail" />

        <TextView
            android:id="@+id/tv_vote_average_movies_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="4dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/tv_vote_movies"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_movies_detail" />

        <com.sackcentury.shinebuttonlib.ShineButton
            android:id="@+id/btn_fav"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            android:src="@android:color/darker_gray"
            app:allow_random_color="false"
            app:btn_color="@android:color/darker_gray"
            app:btn_fill_color="@android:color/holo_red_dark"
            app:click_animation_duration="200"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:shine_count="8"
            app:siShape="@raw/heart" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_overview"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_movies_detail">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_overview"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/line"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line"
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:background="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_popularity"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/line"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_popularity_movies_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/line"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popularity"
                tools:text="@string/text_popularity" />

            <TextView
                android:id="@+id/tv_overview_movies_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line"
                tools:text="@string/text_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar_movies_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>